modify styles and add accordion component

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-  <programs-api organization="5acbb38a5c07adc63e79f8fb"></programs-api>
+  <programs-api color="#16a085" organization="5acbb38a5c07adc63e79f8fb"></programs-api>
 
 </body>
 </html>
