fixup! updates to programs API endpoint and styling

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-  <programs-api color="#16a085" organization="5d714573e8169006d23179c5"></programs-api>
+  <programs-api color="#4885ed" organization="5d714573e8169006d23179c5"></programs-api>
 
 </body>
 </html>
