styling responsive updates and color prop option

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-  <programs-api organization_id="5d714573e8169006d23179c5" organization_name="VanCity Basketball Academy"></programs-api>
+  <programs-api organization_id="5d714573e8169006d23179c5" organization_name="VanCity Basketball Academy" color="#ffcc99"></programs-api>
 
 </body>
 </html>
