add enrol_button_color prop, checkbox_color prop, variable height prop, injectGlobal styles handling

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,15 @@
 </head>
 <body>
 
-  <programs-api organization_id="5d714573e8169006d23179c5" organization_name="VanCity Basketball Academy" color="#ffcc99"></programs-api>
+  <programs-api
+    organization_id="5d714573e8169006d23179c5"
+    organization_name="VanCity Basketball Academy"
+    color="#ffcc99"
+    enrol_button_color="#ffcc99"
+    checkbox_color="#f35429"
+    programs_height="100%"
+    >
+  </programs-api>
 
 </body>
 </html>
