add functionality for pre-selecting program types (checked defaults)

--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
     enrol_button_color="#ffcc99"
     checkbox_color="#f35429"
     programs_height="100%"
+    selected_options='[{"name": "external league"}, {"name": "camp"}]'
     >
   </programs-api>
 
